--- a/src/app/home/dialog-overview-example-dialog.html
+++ b/src/app/home/dialog-overview-example-dialog.html
@@ -1,11 +1,11 @@
 <mat-card>
   <mat-card-content>
     <mat-form-field>
-      <input matInput placeholder="Qual o seu primeiro nome?" ng-model="data.nome" />
+      <input matInput placeholder="Qual o seu primeiro nome?" ng-model="data.name" />
     </mat-form-field>
     <div mat-dialog-actions>
       <button mat-button (click)="onNoClick()">Fechar</button>
-      <button mat-button [mat-dialog-close]="data.nome" cdkFocusInitial>Ok</button>
+      <button mat-button [mat-dialog-close]="data.name" cdkFocusInitial>Ok</button>
     </div>
   </mat-card-content>
 </mat-card>
